# anycode

./: .gitignore  README.md  TO-DO.md
aloha/01/: aloha.c  configure.ac
config/debian-fluxbox/: init  menu-arch  startup
config/debian-xfce4/: xfce4-screenshooter
config/fedora-fluxbox-vanilla/: startup
config/fedora-openbox-vanilla/: rc.xml
config/opensuse-fluxbox-vanilla/: fbrun_history  init  lastwallpaper
inkscape/: export_layers.py
inkscape/extensions/: duplicate_layer.inx  duplicate_layer.py  fill_layers.inx  fill_layers.py  hello.inx  hello.py  kotak.inx  kotak.py  query_layer.02.py  query_layer.inx  query_layer.py  rectangle.inx  rectangle.py
jekyll/: _config.yml  index.html
jekyll/_includes/: head.html
jekyll/_layouts/: default.html  post.html
jekyll/_posts/: 2018-02-20-using-jekyll.markdown
jekyll/_site/: index.html
jekyll/pages/: salam.html
latex/2018-02-bekerja-menggunakan-git/: bekerja-menggunakan-git.tex
lemonbar/clickable/: pipe-clickable.sh  pop-art.sh
pipe/: fork-summary.txt
pipe/assets/: conky-dzen2-debug.lua  conky.lua  debug.lua  debug.sh
pipe/bash/: bash-02-native.sh  bash-03-pipe.sh  bash-03-simple.sh  bash-04-fork-simple.sh  bash-05-fork.sh  bash-06-conky-simple.sh  bash-07-conky.sh  bash-17-conky.sh  bash-21-basic-clickable.sh  bash-dir.sh
pipe/haskell/: haskell-02-process.hs  haskell-02-system.hs  haskell-03-process.hs  haskell-05-fork.hs  haskell-07-fork.hs  haskell-17-fork.hs
pipe/loop/: bash-01-basic.sh  haskell-01-basic.hs  perl-01-basic.pl  ruby-01-basic.rb
pipe/lua/: lua-01-basic.lua  lua-02-popen.lua  (+4 more)
(+510 files in other folders)
